--- a/todo.txt
+++ b/todo.txt
@@ -1,14 +1,14 @@
 FEATURES
 --------
 - HUD /
-- Level/scene recipe
+- Level/scene recipe ~
 - chaining scenes
 - Ammo /
 - Item pickup /
 - Shotgun shooting /
 - Switch weapons /
 - shot duration /
-- ChainGun
+- ChainGun /
 - projectile origins
 - Sprite body intersection with wall tiles
 - Enemy AI - follow path to player
@@ -38,7 +38,7 @@ BUGS
 ----
 - dead bodies appear above walls/ceilings
 - projectiles don't disappear on colliding with world bounds /
-- burst projectiles can go through walls
+- burst projectiles can go through walls - keep as feature?
 
 ADMIN
 -----
