--- a/todo.txt
+++ b/todo.txt
@@ -1,7 +1,7 @@
 FEATURES
 --------
 - HUD /
-- Level/scene recipe ~
+- Level/scene recipe /
 - chaining scenes
 - Ammo /
 - Item pickup /
@@ -9,6 +9,7 @@ FEATURES
 - Switch weapons /
 - shot duration /
 - ChainGun /
+- Armour /
 - projectile origins
 - Sprite body intersection with wall tiles
 - Enemy AI - follow path to player
